# sambidhan

./: README.md  main.py  pyproject.toml  requirements.txt
data/: file1.txt  file2.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
